# Learn-fastapi-tier1

./: .env  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
app/: main.py
app/core/: base_logger.py  config.py
app/crud/: favs.py
app/db/: db_config.py
app/models/: favs.py
app/routes/: favs.py
docker/: Dockerfile  run.sh
tests/: test_learning_fastapi.py
