[tool.poetry]
name = "Learning_fastapi"
version = "0.1.0"
description = ""
authors = ["Cristi Ciortea <cristi.ciortea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
beanie = "^1.11.9"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
pymongo = {extras = ["srv"], version = "^4.2.0"}
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
black = "^22.8.0"
ipython = "^8.4.0"

[build-system]
# poetry should be the same as `$POETRY_VERSION`
requires = ["poetry>=1.2.0", "poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
